clean(all): migration cleaning pre prod
