# api/identityx/internal/services/profiles/upsert_platform_profile.go
@@ -42,6 +42,7 @@ func (o *Operations) UpsertPlatformProfile(ctx context.Context, payload models.U
 	return o.profiles.Upsert(ctx, models.ActorProfile{
 		ActorID:       payload.ActorID,
 		Handle:        payload.Handle,
+		PfpURL:        payload.PfpURL,
 		Profile:       payload.Profile,
 		SchemaVersion: version,
 		Outdated:      false,
