# api/identityx/internal/services/profiles/upsert_profile.go
@@ -49,6 +49,7 @@ func (o *Operations) UpsertProfile(ctx context.Context, payload models.UpsertPro
 	return o.profiles.Upsert(ctx, models.ActorProfile{
 		ActorID:       payload.ActorID,
 		Handle:        payload.Handle,
+		PfpURL:        payload.PfpURL,
 		Profile:       payload.Profile,
 		SchemaVersion: version,
 		Outdated:      false,
