# api/identityx/models/actors.go
@@ -45,6 +45,7 @@ type Actor struct {
 type ActorProfile struct {
 	ActorID       uuid.UUID       `json:"actor_id"`
 	Handle        *string         `json:"handle"`
+	PfpURL        *string         `json:"pfp_url"`
 	Profile       json.RawMessage `json:"profile"`
 	SchemaVersion int             `json:"schema_version"`
 	Outdated      bool            `json:"outdated"`
